--- a/Project2/Assembly-CSharp.csproj
+++ b/Project2/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\ControlEnemigo.cs" />
      <Compile Include="Assets\Scripts\ControlPatrullaje.cs" />
      <Compile Include="Assets\Scripts\ControlResistencia.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\playerControler.cs" />
      <None Include="Assets\ParticleShadersVol1\Shaders\EM_Particles_Lit_MultiLight.shader" />
      <None Include="Assets\ParticleShadersVol1\Shaders\EM_Particles_Lit_Fallback.shader" />
